Mon Nov  9 11:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/externs.m: fixed error in hashtable constants.
	* src/NSDistributedNotificationCenter.m: pugfix in check for
	posting of notification.  Changed to pass selectors as strings.
	* Tools/gdnc.h: Pass selectors as strings. make posting oneway
	* Tools/gdnc.m: Pass selectors as strings, plus many bugfixes.

Mon Nov  2 17:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Tidied header files for NO_GNUSTEP/STRICT_OPENSTEP stuff.
	* src/NSDistributedNotificationCenter.m: New class (untested)
	* src/include/NSDistributedNotificationCenter.m: New class
	* src/GNUmakefile: Added NSDistributedNotificationCenter
	* src/Tools/gdnc.m: Server for distributed notifications (untested)
	* src/Tools/gdnc.h: Include for distributed notifications
	* src/Tools/GNUmakefile: Added gdnc

Fri Oct 30 09:00:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/include/NSPortNameServer.h: Added ([-removePort:]) method in a
	GNUstep catagory so that ports can unregister all their names at one
	go. Added maps of names and ports to keep track.
	* src/include/Port.h: removed [-invalidate] - inherit from NSPort
	* src/Port.m: removed [-invalidate] - inherit from NSPort
	* src/NSPort.m: made [-invalidate] method remove all the ports names
	from the name server and send the invalidation notification.
	* src/NSPortNameServer.m: Keep track of name/port mappings and, the
	first time a name is registered for a port, tell gdomap to remove
	any pre-existing names for that port (left around from a crashed
	server perhaps).

Thu Oct 29 13:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/UnixFileHandle.m: Improved handling of error conditions on
	background connection operations.  Disable SIGPIPE to avoid abort
	when we attempt to write to a socket that's closed by the other end.
	* src/TCPPort.m: Modified to use NSPortNameServer, also changed to